--- a/header.css
+++ b/header.css
@@ -15,7 +15,7 @@ body {
 }
 
 /* Header */
-nav {
+header nav {
     display: flex;
     justify-content: space-between;
     gap: auto;
@@ -93,7 +93,7 @@ a {
 
 .nav-link li:hover .dropdown {
     display: block;
-    position:absolute;
+    position: absolute;
     background-color: antiquewhite;
     padding-left: 10px;
     border-radius: 5px;
@@ -128,8 +128,9 @@ a {
     /* font-size: 40px; */
 }
 
-.exp{
+.exp {
     font-size: 50px;
+    text-align: center;
 }
 
 .la {
@@ -172,34 +173,40 @@ a {
     color: rgba(255, 255, 255, 0.899);
 }
 
-.dt{
+.dt {
     display: none;
     justify-content: end;
 }
 
 @media screen and (max-width: 576px) {
+    header nav {
+        display: flex;
+        justify-content: center;
+        gap: 0px;
+    }
+
     /* Container for the icon */
-.menu-icon {
-    width: 25px;
-    height: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-}
+    .menu-icon {
+        width: 25px;
+        height: 15px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        cursor: pointer;
+    }
 
 
-/* Each line of the icon */
-.menu-icon div {
-    width: 100%;
-    height: 3px;
-    background-color: #333;
-    /* Change color as needed */
-    border-radius: 2px;
-    /* Optional: adds rounded corners to the lines */
-    transition: all 0.3s ease;
-    /* Optional: smooth transition for animations */
-}
+    /* Each line of the icon */
+    .menu-icon div {
+        width: 100%;
+        height: 3px;
+        background-color: #333;
+        /* Change color as needed */
+        border-radius: 2px;
+        /* Optional: adds rounded corners to the lines */
+        transition: all 0.3s ease;
+        /* Optional: smooth transition for animations */
+    }
 
     .HeroTravel {
         /* display: flex; */
@@ -209,20 +216,21 @@ a {
         font-size: 21px;
     }
 
-    .text {   
+    .text {
         width: 120px;
         height: 27px;
         font-size: 21px;
-        align-items: center;;  
-      
+        align-items: center;
+        ;
+
     }
 
-    .hero{
+    .hero {
         font-size: 30px;
         align-items: center;
     }
 
-    .travel{
+    .travel {
         font-size: 30px;
         align-items: center;
     }
@@ -232,17 +240,19 @@ a {
         height: auto;
     }
 
-    .dt{
+    .dt {
         display: block;
     }
-    .mt{
+
+    .mt {
         display: none;
     }
-    .nav-link{
+
+    .nav-link {
         justify-content: end;
     }
 
-    .exp{
+    .exp {
         font-size: 30px;
         align-items: center;
     }
@@ -263,7 +273,7 @@ a {
         font-size: var(--first-fontsize);
     }
 
-    .button-L{
+    .button-L {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -274,7 +284,7 @@ a {
         margin-bottom: 20px;
     }
 
-    .button-L .btn{
+    .button-L .btn {
         width: 75%;
         height: 60px;
         font-size: 16px;
