--- a/main.css
+++ b/main.css
@@ -29,6 +29,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 55%;
 }
 
 .ht1 {
@@ -59,6 +60,8 @@ body {
 .hill {
     display: flex;
     transition: transform 0.3s ease;
+    /* width: 45%; */
+    height: 550px;
 }
 
 .hill:hover {
@@ -119,6 +122,35 @@ body {
 
 }
 
+@media screen and (min-width: 576px) and (max-width: 992px){
+    .our-popular-tours {
+        display: block;
+        padding-bottom: 44px;
+
+    }
+
+    .txt1 {
+        padding-top: 20px;
+        padding-right: 0%;
+        padding-bottom: 40px;
+    }
+    
+    .hill {
+        width: 100%;
+        flex-direction: column;
+        border-radius: 17px;
+        padding-bottom: 160px;
+    }
+
+    .hamim{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        margin: 7vmin 7vmax;
+    }
+}
+
 @media screen and (max-width: 576px) {
 
     /* Body */
@@ -139,7 +171,7 @@ body {
     }
 
     .hill {
-        /* width: 30vmin; */
+        width: 100%;
         flex-direction: column;
         border-radius: 17px;
     }
